hphp/hack/test/typecheck/typeconsts/default_basic.php.exp
File "default_basic.php", line 19, characters 9-9:
Invalid argument (Typing[4110])
File "default_basic.php", line 6, characters 21-27:
This is the expression dependent type \A::T
File "default_basic.php", line 4, characters 23-23:
  resulting from expanding the type constant A::T
File "default_basic.php", line 19, characters 9-9:
It is incompatible with an int
